--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">看片神器</string>
     <string name="loading">正在加载中...</string>
+    <string name="allsearch">全网搜索</string>
 </resources>
